--- a/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
+++ b/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
@@ -140,16 +140,17 @@
                             </div>
                         </ng-container>
 
-                        <ng-container fuseCardBack>
+                        <!-- <ng-container fuseCardBack>
                             <div class="relative w-full h-full rounded-3xl shadow-lg
                 bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-[1000]">
                             </div>
-                        </ng-container>
+                        </ng-container> -->
 
                     </fuse-card>
                     @if(overlayAnimatedOnce){
 
-                    <div class="absolute max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh] px-1" [ngClass]="[
+                    <div class="absolute max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh] px-3 sm:px-0"
+                        [ngClass]="[
         heroCard?.face === 'back'
           ? 'opacity-100 z-[50] pointer-events-auto'
           : 'opacity-0 z-[-1] pointer-events-none',
@@ -158,37 +159,66 @@
           ? 'transition-opacity duration-1000'
           : ''
       ]">
+                        <div class="bg-white rounded-2xl shadow-xl p-4 w-full h-full flex flex-col">
 
-                        <div class="relative w-full h-full rounded-3xl shadow-lg
-                  bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white">
-
-                            <button type="button" mat-icon-button
-                                class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
-                                (click)="hideOverlay();">
-                                <mat-icon class="text-white">arrow_back</mat-icon>
-                            </button>
-
-                            <div class="w-full h-full flex flex-col text-center min-h-0">
-                                <h2 class="text-3xl font-bold mb-4 tracking-tight">
-                                    {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
-                                </h2>
-
-                                <p class="text-md text-gray-300 mb-6">
+                            <div class="mb-8">
+                                <div class="flex items-center justify-between">
+                                    <button type="button" mat-icon-button
+                                        class="rounded-full hover:bg-gray-100 transition" (click)="hideOverlay()">
+                                        <mat-icon class="text-[#1a1a1a]">arrow_back</mat-icon>
+                                    </button>
+                                    <h1 class="flex-1 text-center text-4xl font-serif font-bold text-[#1a1a1a]">
+                                        {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
+                                    </h1>
+                                    <div class="w-10"></div>
+                                </div>
+                                <p class="mt-2 text-center text-gray-500 text-sm sm:text-base font-sans">
                                     {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
                                 </p>
+                            </div>
 
-                                <div class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
-                                    <button *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
-                                        class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
-                               text-lg font-semibold tracking-wide backdrop-blur-sm transition
-                               flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
-                                        <span class="group-hover:not-italic">
-                                            {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
-                                        </span>
-                                    </button>
+                            <div class="relative mb-8">
+                                <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
+                                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
+                                        stroke-width="2" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                                            stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
                                 </div>
+                                <input
+                                    class="w-full pl-11 pr-4 py-3 rounded-full border focus:ring-2 focus:ring-brand-green/20 focus:outline-none placeholder-gray-400 text-gray-800 text-sm shadow-sm transition-shadow border-[#004d2c]"
+                                    placeholder="Search destinations..." type="text" />
+                            </div>
+
+                            <div class="flex-1 min-h-0 overflow-y-auto cdkScrollable px-4">
+                                <a *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
+                                    class="group flex items-center justify-between border-b hover:bg-gray-50  transition-colors py-6 border-[#f0f0f0]"
+                                    (click)="cargaInfo(item)">
+                                    <!-- href="#"  -->
+                                    <div class="flex items-center gap-4">
+                                        @if(tipoDestino === 1){
+                                        <img [alt]="item.nombre"
+                                            class="w-16 h-16 rounded-full object-cover shadow-sm group-hover:scale-105 transition-transform duration-300"
+                                            [src]="item.imagen_destino" />
+                                        }
+                                        <span
+                                            class="font-serif font-bold  group-hover:text-brand-green transition-colors text-xl text-[#1a1a1a]">
+                                            {{tipoDestino === 1 ? item.nombre : item.nombrePadre }}</span>
+                                    </div>
+                                    <div
+                                        class="flex items-center gap-1 text-[#006400] text-sm font-medium shrink-0 leading-none mr-2">
+                                        <span class="leading-none">Explore</span>
+                                        <svg class="w-4 h-4 block" fill="none" stroke="currentColor" stroke-width="2"
+                                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4.5 19.5 19.5 4.5m0 0H8.25m11.25 0v11.25" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                        </svg>
+                                    </div>
+                                </a>
                             </div>
                         </div>
+
                     </div>
                     }
 
