Filtrado de destinos nacionales e internacionales

--- a/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
+++ b/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
@@ -177,22 +177,24 @@
                                 </p>
                             </div>
 
-                            <div class="relative mb-8">
-                                <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
-                                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
-                                        stroke-width="2" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
-                                            stroke-linecap="round" stroke-linejoin="round"></path>
-                                    </svg>
+                            <form [formGroup]="filterForm">
+                                <div class="relative mb-8">
+                                    <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
+                                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor"
+                                            stroke-width="2" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                                                stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                    </div>
+                                    <input formControlName="busqueda"
+                                        class="w-full pl-11 pr-4 py-3 rounded-full border focus:ring-2 focus:ring-brand-green/20 focus:outline-none placeholder-gray-400 text-gray-800 text-sm shadow-sm transition-shadow border-[#004d2c]"
+                                        [placeholder]="t('buscar-destinos')" type="text" />
                                 </div>
-                                <input
-                                    class="w-full pl-11 pr-4 py-3 rounded-full border focus:ring-2 focus:ring-brand-green/20 focus:outline-none placeholder-gray-400 text-gray-800 text-sm shadow-sm transition-shadow border-[#004d2c]"
-                                    placeholder="Search destinations..." type="text" />
-                            </div>
+                            </form>
 
                             <div class="flex-1 min-h-0 overflow-y-auto cdkScrollable px-4">
-                                <a *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
+                                <a *ngFor="let item of destinosFiltrados"
                                     class="group flex items-center justify-between border-b hover:bg-gray-50  transition-colors py-6 border-[#f0f0f0]"
                                     (click)="cargaInfo(item)">
                                     <!-- href="#"  -->
