--- a/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
+++ b/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
@@ -119,8 +119,8 @@
                                                     (click)="cargarDestinos(2); showOverlay(); closeDropdown();">
                                                     <div class="w-12 h-12 flex items-center justify-center
                    rounded-full overflow-hidden">
-                                                        <!-- <img class="w-full h-full object-cover"
-                                                            src="images/earth-icon.svg" alt="Internacional" /> -->
+                                                        <img class="w-full h-full object-cover"
+                                                            src="images/cruceros.svg" alt="Internacional" />
                                                     </div>
 
                                                     <div class="text-left">
